# ias

./: README.md
IAS/: CMakeLists.txt  partitions_ota.csv  sdkconfig  sdkconfig.old  version.txt
IAS/components/LTC2941/: CMakeLists.txt
IAS/components/LTC2941/include/: esp_ltc2941.h
IAS/components/LTC2941/src/: esp_ltc2941.c
IAS/components/ina219/: CMakeLists.txt
IAS/components/ina219/include/: esp_ina219.h
IAS/components/ina219/src/: esp_ina219.c
IAS/components/lora/: CMakeLists.txt
IAS/components/lora/src/: esp_lora_config_back.c
IAS/components/max1704/: CMakeLists.txt
IAS/components/max1704/include/: esp_max1704.h
IAS/components/max1704/src/: esp_max1704.c
IAS/components/modem/: CMakeLists.txt
IAS/components/modem/include/: esp_modem.h  esp_modem_compat.h
IAS/components/modem/src/: esp_modem.c  esp_modem_bg96.c  esp_modem_compat.c  esp_modem_sim800.c
IAS/components/uart/: CMakeLists.txt
IAS/components/uart/src/: esp_uart_config.c
IAS/main/: CMakeLists.txt  Kconfig.projbuild  ixe_blufi_security.c  ixe_ias_485.c  ixe_ias_485.h  ixe_ias_4g.c  ixe_ias_4g.h  ixe_ias_cmd.c  ixe_ias_cmd.h  ixe_ias_hmi.c  ixe_ias_hmi.h  ixe_ias_lora.c  ixe_ias_lora.h  ixe_ias_util.c  ixe_ias_util.h  ixe_main.c  ixe_main.h  ixe_mqtt.c  ixe_mqtt.h  ixe_ota.c  ixe_ota.h
IAS/server_certs/: ca_cert.pem
IAS/si_project/: ias.IAB  ias.IAD  ias.IMB  ias.IMD  ias.PFI  ias.PO  ias.PR  ias.PRI  ias.PS  ias.SearchResults  ias.WK3
